# RAG-Hybrid

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  rag_hybrid_actions.txt
docs/: Sample Data about Portugal.docx  Sample document.docx  Testcase.xlsx  peacock text - 2 table - 1 image.docx  peacock text - 2 table - 2 image.docx  peacock text - table.docx  peacock text.docx  table.xlsx  test data with text table images.pptx  ~$acock text - 2 table - 1 image.docx  ~$acock text - 2 table - 2 image.docx  ~$acock text - table.docx
rag_hybrid/: __init__.py  app_logging.py  assets.py  chat.py  config.py  db.py  embeddings.py  extractor.py  graph.py  ingestion.py  ingestion_handlers.py  llm.py  models.py  qdrant_store.py  query_classification.py  retrievers.py
rag_hybrid/ui/: chat_page.py  upload_page.py
sql/: init_pgvector.sql
tests/: test_multi_content_retrieval.py
